update css fixes to link button and gaps

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10rem;
+  gap: 6rem;
   margin-left: auto;
   margin-right: auto;
   padding: 12rem 3rem 0 3rem;
