--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -46,13 +46,12 @@ li {
 }
 .projects-content button {
   color: #fd7014;
-  border: 2px solid #fd7014;
-  font-weight: 700;
-  font-size: 20px;
+  font-weight: 500;
   background-color: #eeeeee;
   margin-left: 2rem;
   margin-bottom: 1rem;
-  border-radius: 2px;
+  padding: 6px 15px;
+  border: none;
 }
 
 /* Github logo  */
@@ -62,7 +61,9 @@ li {
   height: 100%;
 }
 img {
-  height: 500px;
+  height: 100%;
+  height: auto;
+  max-width: 600px;
 }
 /* Smaller Screen  */
 
